Added a new avatar image

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                                     <div class="c-header__avatar">
                                         <div class="a-header  c-avatar">
-                                            <img class="c-avatar__img" src="assets/images/header/avatar.jpg" alt="">
+                                            <img class="c-avatar__img" src="assets/images/avatar.jpg" alt="">
                                         </div><!-- /c-avatar -->
                                     </div><!-- /c-header-avatar -->
 
@@ -93,10 +93,10 @@
                                                 <h1 class="c-brand__title  t-title">
                                                     <span class="c-brand__sizer">
                                                         <span class="a-header  c-brand__first-word  t-title__first-word">
-                                                            Michael
+                                                            Achero
                                                         </span>
                                                         <span class="a-header  c-brand__second-word  t-title__second-word">
-                                                            La Plante
+                                                            John
                                                         </span>
                                                     </span>
                                                 </h1>
@@ -140,7 +140,7 @@
                                                     <div class="o-content__body">
                                                         <h4>Location</h4>
                                                         <address>
-                                                            Tampa, Fl
+                                                            Orlando, Fl
                                                         </address>
                                                     </div>
                                                 </div><!-- /o-content -->
@@ -151,7 +151,7 @@
                                                     <div class="o-content__body">
                                                         <h4>Phone</h4>
                                                         <p>
-                                                            904.419.3284
+                                                            515.419.3284
                                                         </p>
                                                     </div>
                                                 </div><!-- /o-content -->
@@ -179,7 +179,7 @@
                                                             <h4>Email</h4>
                                                             <p>
                                                                 <span class="t-link-container__item--blended">
-                                                                    fullsail@michaellaplante.com
+                                                                    jkachero@student.fullsail.edu
                                                                 </span>
                                                             </p>
                                                         </a><!-- /o-link-container -->
