--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <title>Build a website at HOF 11</title>
+        <title>myResume</title>
 
         <meta name="description" content="">
 
@@ -75,7 +75,7 @@
 
                                     <div class="c-header__avatar">
                                         <div class="a-header  c-avatar">
-                                            <img class="c-avatar__img" src="assets/images/avatar.jpg" alt="">
+                                            <img class="c-avatar__img" src="assets/images/header/avatar.jpg" alt="">
                                         </div><!-- /c-avatar -->
                                     </div><!-- /c-header-avatar -->
 
@@ -102,7 +102,7 @@
                                                 </h1>
                                                 <h2 class="a-header  c-brand__sub-title  t-sub-title">
                                                     <span class="c-brand__sizer">
-                                                        Web Developer &amp; Front-end Expert
+                                                        Web Developer &amp; Front-end
                                                     </span>
                                                 </h2>
                                             </div><!-- /c-brand -->
@@ -123,6 +123,16 @@
                                             <li class="a-header">
                                                 <a href="https://twitter.com/laplantewebdev" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="fab  fa-lg  fa-twitter"></i>
+                                                </a>
+                                            </li>
+                                            <li class="a-header">
+                                                <a href="https://twitter.com/laplantewebdev" target="_blank" class="c-social-button  t-social-button">
+                                                    <i class="fab  fa-lg  fa-instagram"></i>
+                                                </a>
+                                            </li>
+                                            <li class="a-header">
+                                                <a href="https://twitter.com/laplantewebdev" target="_blank" class="c-social-button  t-social-button">
+                                                    <i class="fab  fa-lg  fa-youtube"></i>
                                                 </a>
                                             </li>
                                         </ul><!-- /c-header__social-buttons -->
@@ -151,7 +161,7 @@
                                                     <div class="o-content__body">
                                                         <h4>Phone</h4>
                                                         <p>
-                                                            515.419.3284
+                                                            515.943.8306
                                                         </p>
                                                     </div>
                                                 </div><!-- /o-content -->
@@ -164,7 +174,7 @@
                                                             <h4>Web</h4>
                                                             <p>
                                                                 <span class="t-link-container__item--blended">
-                                                                    michaellaplante.com
+                                                                    augusthomeacademy.com
                                                                 </span>
                                                             </p>
                                                         </a><!-- /o-link-container -->
@@ -662,7 +672,7 @@
                                                     Front-end Designer
                                                 </h4>
                                                 <div class="c-work__location">
-                                                    New York, NY
+                                                    Orlando, FL
                                                 </div>
                                             </div>
                                             <div class="o-grid__col-md-7">
@@ -839,7 +849,7 @@
                                             <div class="o-content__body">
                                                 <h4>Location</h4>
                                                 <address>
-                                                    Tampa, Fl
+                                                    Orlando, Fl
                                                 </address>
                                             </div>
                                         </div><!-- /o-content -->
@@ -863,7 +873,7 @@
                                                     <h4>Web</h4>
                                                     <p>
                                                         <span class="t-link-container__item--blended">
-                                                            michaellaplante.com
+                                                            jkachero@student.fullsail.edu
                                                         </span>
                                                     </p>
                                                 </a><!-- /o-link-container -->
@@ -900,10 +910,10 @@
                                                     <h1 class="c-brand__title  t-title">
                                                         <span class="c-brand__sizer  c-brand__sizer--sm">
                                                             <span class="a-footer  c-brand__first-word  t-title__first-word">
-                                                                Michael
+                                                                John
                                                             </span>
                                                             <span class="a-footer  c-brand__second-word  t-title__second-word">
-                                                                La Plante
+                                                                Achero
                                                             </span>
                                                         </span>
                                                     </h1>
@@ -926,6 +936,16 @@
                                             <li class="a-footer">
                                                 <a href="https://twitter.com/laplantewebdev" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="fab  fa-lg  fa-twitter"></i>
+                                                </a>
+                                            </li>
+                                            <li class="a-footer">
+                                                <a href="https://twitter.com/laplantewebdev" target="_blank" class="c-social-button  t-social-button">
+                                                    <i class="fab  fa-lg  fa-instagram"></i>
+                                                </a>
+                                            </li>
+                                            <li class="a-footer">
+                                                <a href="https://twitter.com/laplantewebdev" target="_blank" class="c-social-button  t-social-button">
+                                                    <i class="fab  fa-lg  fa-youtube"></i>
                                                 </a>
                                             </li>
                                         </ul><!-- /c-footer__social-buttons -->
