--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <link rel="stylesheet" href="assets/css/main.css">
 
         <!-- Themes -->
-        <!-- <link rel="stylesheet" href="assets/css/themes.light.css"> -->
-        <link rel="stylesheet" href="assets/css/themes.dark.css">
+        <link rel="stylesheet" href="assets/css/themes.light.css">
+        <!-- <link rel="stylesheet" href="assets/css/themes.dark.css"> -->
 
         <!-- jQuery -->
         <script src="assets/js/jquery.min.js"></script>
